Changelog
=========

2.4.dev0 - (unreleased)
-----------------------

2.3 - (2017-09-20)
------------------
* Feature: Added item_type to sparql queries
  [tiberich #74985]:

2.2 - (2017-04-14)
------------------
* Split precooked into bise.datatiles

2.1 - (2017-03-29)
------------------
- Further implementation "precooked topic pages"

2.0 - (2016-12-12)
------------------
* Initial development of the Topic pages
  [tiberich #74985]

1.1 - (2016-08-09)
------------------
* Bug fix: fix javascript error in maesgallery_view
[tiberich #74914]

1.0.1 - (2014-05-21)
---------------------
- Brown bag release with the real content of the package
  [erral]

1.0 - (2014-05-21)
-------------------
- Initial release
  [erral]
